# avery-autodev

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
backend/: .env.example  CELERY_QUICK_REFERENCE.md  CELERY_SCRIPTS.md  CELERY_SETUP.md  CHANGELOG_EXTENSION_DETECTION.md  Dockerfile  ISSUE_POLLING.md  MCP_SERVER_README.md  MIGRATIONS.md  MIGRATION_APPLIED.md  MIGRATION_SETUP_SUMMARY.md  PRODUCTION_SETUP.md  QUICKSTART.md  README.md  UV_CELERY_FIX.md  alembic.ini  celery_debug.sh  celery_flower.sh  celery_manage.sh  celery_worker.sh  main.py  migrate.sh  pyproject.toml  pytest.ini  redis.conf.production  run_mcp_server.py  run_migrations.py  start_celery_worker.sh  start_flower.sh
backend/alembic/: env.py
backend/alembic/versions/: 56b788844df9_initial_baseline.py  67bb1fdbf2ba_add_subscription_models.py  6933a7af410f_add_auto_create_issues_to_workspace.py  a7ce50bd6a4a_add_attachment_processing_fields.py  a884662a1703_merge_heads.py  a947e05f4a7f_make_ci_run_pr_number_nullable.py  add_agent_jobs_table.py  c1a2b3d4e5f6_add_claude_session_id.py  (+5 more)
backend/app/: celery_app.py  database.py  main.py
backend/avery_core/: __init__.py  cli.py
backend/migrations/: 001_add_last_issue_poll.sql  002_add_polling_history.sql  003_replace_with_polling_status.sql  004_add_polling_enabled.sql  005_add_test_generation_jobs.sql  006_add_google_oauth.sql  007_make_hashed_password_nullable.sql  008_create_magic_link_tokens.sql  MIGRATION_GUIDE.md  MIGRATION_NOTES.md  PHASE2_MIGRATION_NOTES.md  README.md  add_ci_runs_table.sql  add_phase2_tables.sql  add_phase2_tables_postgresql.sql  add_workspace_policy_columns.sql  rollback_phase2_tables.sql  update_pricing_quotas.sql
backend/scripts/: process_existing_task_attachments.py
backend/tests/: conftest.py  test_api_test_policy.py  test_avery_core_package.py  test_coverage_analyzer.py  test_document_processor_extension_detection.py  test_phase2_api_imports.py  test_plugin_system.py  test_policy_enforcer.py
(+212 files in other folders)
