[project]
name = "autodev"
version = "0.1.0"
description = "Open-source AI coding agent - autonomous code generation, test generation, and CI fixes from GitHub issues"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["ai", "coding-agent", "github", "automation", "claude", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "pydantic-settings>=2.6.0",
    "pydantic[email]>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "pygithub>=2.1.0",
    "cryptography>=41.0.0",
    "anthropic>=0.18.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "authlib>=1.3.0",
    "itsdangerous>=2.1.0",
    "aiosmtplib>=3.0.0",
    "email-validator>=2.1.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "flower>=2.0.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "opencv-python-headless>=4.8.0",
    "openai>=1.0.0",
    "mcp>=1.0.0",
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
autodev = "avery_core.cli:main"

[project.entry-points."avery.plugins"]
ce = "app.engine.plugins:AveryPlugin"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "avery_core*"]
exclude = ["migrations*", "tests*"]
